--- a/examples/laydate-laydateTab.html
+++ b/examples/laydate-laydateTab.html
@@ -30,7 +30,7 @@
 		<h1 class="site-h1">laydate单独模块引入方式使用例子-先引入ladate.js和laydateTab.js</h1>
 		<pre class="layui-code" lay-encode="true">
 <script src="js/laydate/laydate.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/layui/extends/laydateTab.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/extends/laydateTab.js" type="text/javascript" charset="utf-8"></script>
 		</pre>
 		<div >
 		  <div class="layui-row">
