修改滚动条滚动和窗体变化进行位置的自适应方式

--- a/examples/laydate-laydateTab.html
+++ b/examples/laydate-laydateTab.html
@@ -29,8 +29,8 @@
 	<body style="padding: 10px;">
 		<h1 class="site-h1">laydate单独模块引入方式使用例子-先引入ladate.js和laydateTab.js</h1>
 		<pre class="layui-code" lay-encode="true">
-<script src="js/laydate/laydate.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/extends/laydateTab.js" type="text/javascript" charset="utf-8"></script>
+&lt;script src="js/laydate/laydate.js" type="text/javascript" charset="utf-8"&gt;&lt;/script&gt;
+&lt;script src="js/extends/laydateTab.js" type="text/javascript" charset="utf-8"&gt;&lt;/script&gt;
 		</pre>
 		<div >
 		  <div class="layui-row">
