--- a/examples/index.html
+++ b/examples/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>laydate单独模块引入方式使用例子</title>
+		<title>laydateTab使用例子</title>
 	</head>
     <body>
-        <h1>test</h1>
+        <a href="layui-laydateTab.html">layui-laydateTab.html</a>
+        <a href="laydate-laydateTab.html">laydate单独模块引入方式使用例子</a>
     </body>
 </html>
